adding append to the constructors and creating some unit tests for the use cases